--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
