--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,11 @@
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
+    "toast": "^0.5.4",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-toast-notification": "^3.1.2",
+    "vue3-toast": "^0.0.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
