--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
+    "node": "^21.6.2",
     "toast": "^0.5.4",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
@@ -40,7 +41,7 @@
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
     "typescript": "~5.3.0",
-    "vite": "^5.0.10",
+    "vite": "^5.1.3",
     "vitest": "^1.0.4",
     "vue-tsc": "^1.8.25"
   }
