--- a/client/package.json
+++ b/client/package.json
@@ -14,19 +14,24 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
+    "file-saver": "^2.0.5",
     "node": "^21.6.2",
+    "socket.io-client": "^4.7.4",
     "toast": "^0.5.4",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
+    "vue-socket.io-extended": "^4.2.0",
     "vue-toast-notification": "^3.1.2",
     "vue3-toast": "^0.0.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
+    "@types/file-saver": "^2.0.7",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^18.19.3",
     "@vitejs/plugin-vue": "^4.5.2",
