--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "file-saver": "^2.0.5",
+    "gcode-preview": "^2.13.0",
     "node": "^21.6.2",
     "socket.io-client": "^4.7.4",
     "toast": "^0.5.4",
@@ -26,7 +27,8 @@
     "vue-router": "^4.2.5",
     "vue-socket.io-extended": "^4.2.0",
     "vue-toast-notification": "^3.1.2",
-    "vue3-toast": "^0.0.1"
+    "vue3-toast": "^0.0.1",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
