--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "file-saver": "^2.0.5",
+    "gcode-preview": "^2.13.0",
     "node": "^21.6.2",
     "socket.io-client": "^4.7.4",
     "toast": "^0.5.4",
