--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "axios": "^1.6.5",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "file-saver": "^2.0.5",
     "gcode-preview": "^2.13.0",
@@ -27,7 +27,8 @@
     "vue-router": "^4.2.5",
     "vue-socket.io-extended": "^4.2.0",
     "vue-toast-notification": "^3.1.2",
-    "vue3-toast": "^0.0.1"
+    "vue3-toast": "^0.0.1",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
@@ -47,7 +48,7 @@
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
     "typescript": "~5.3.0",
-    "vite": "^5.1.3",
+    "vite": "^5.2.2",
     "vitest": "^1.0.4",
     "vue-tsc": "^1.8.25"
   }
