--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "vue-router": "^4.2.5",
     "vue-socket.io-extended": "^4.2.0",
     "vue-toast-notification": "^3.1.2",
+    "vue3-colorpicker": "^2.3.0",
     "vue3-toast": "^0.0.1",
     "vuedraggable": "^4.1.0"
   },
