--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.3",
+    "bootstrap-daterangepicker": "^3.1.0",
     "cors": "^2.8.5",
     "file-saver": "^2.0.5",
     "gcode-preview": "^2.13.0",
@@ -27,6 +28,8 @@
     "vue-router": "^4.2.5",
     "vue-socket.io-extended": "^4.2.0",
     "vue-toast-notification": "^3.1.2",
+    "vue2-daterange-picker": "^0.6.8",
+    "vue3-daterange-picker": "^1.0.1",
     "vue3-toast": "^0.0.1",
     "vuedraggable": "^4.1.0"
   },
