--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@vuepic/vue-datepicker": "^8.5.0",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.3",
     "bootstrap-daterangepicker": "^3.1.0",
