--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "vue-project",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
+  "type": "module", 
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -11,7 +11,10 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "start-flask": "cd ../server && flask run",
+    "start-vue": "npm run dev",
+    "start": "npm-run-all --parallel start-flask start-vue"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
