--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "vue-project",
   "version": "0.0.0",
   "private": true,
-  "type": "module", 
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -14,7 +14,8 @@
     "format": "prettier --write src/",
     "start-flask": "cd ../server && flask run",
     "start-vue": "npm run dev",
-    "start": "npm-run-all --parallel start-flask start-vue"
+    "start": "npm-run-all --parallel start-flask start-vue",
+    "open-browser": "open http://localhost:5173"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
@@ -51,6 +52,7 @@
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^23.0.1",
+    "npm-run-all": "^4.1.5",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
     "typescript": "~5.3.0",
