test one of the new installer and launcher

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,4 @@
 FLASK_ENV=development
 FLASK_APP=app.py
 FLASK_RUN_PORT=8000
-SQLALCHEMY_DATABASE_URI=hvamc.db
-BASE_URL=http://localhost:8000
+SQLALCHEM=192.168.1.106:8000
