--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,12 @@
 {
   "name": "vue-project",
-  "version": "0.0.0",
+  "author": "SUNY Hydra Lab",
+  "description": "QView3D Client Electron Application",
+  "productName": "QView3D",
+  "license": "MIT",
+  "version": "0.9.0",
   "private": true,
+  "main": "electron.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,7 +20,11 @@
     "start-flask": "cd ../server && flask run",
     "start-vue": "npm run dev",
     "start": "npm-run-all --parallel start-flask start-vue",
-    "open-browser": "open http://localhost:5173"
+    "start-electron": "electron-forge start",
+    "open-browser": "open http://localhost:5173",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "build-installer": "./Installer.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
@@ -24,9 +33,11 @@
     "bootstrap": "^5.3.3",
     "bootstrap-daterangepicker": "^3.1.0",
     "cors": "^2.8.5",
+    "electron-squirrel-startup": "^1.0.1",
     "file-saver": "^2.0.5",
     "gcode-preview": "^2.13.0",
     "node": "^21.6.2",
+    "serve-handler": "^6.1.5",
     "socket.io-client": "^4.7.4",
     "toast": "^0.5.4",
     "vue": "^3.3.11",
@@ -38,6 +49,14 @@
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^7.4.0",
+    "@electron-forge/maker-deb": "^7.4.0",
+    "@electron-forge/maker-rpm": "^7.4.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
+    "@electron-forge/plugin-fuses": "^7.4.0",
+    "@electron/fuses": "^1.8.0",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/file-saver": "^2.0.7",
@@ -49,6 +68,8 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.3",
     "@vue/tsconfig": "^0.5.0",
+    "electron": "^32.1.1",
+    "electron-wix-msi": "^5.1.3",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^23.0.1",
@@ -59,5 +80,29 @@
     "vite": "^5.2.9",
     "vitest": "^1.0.4",
     "vue-tsc": "^1.8.25"
-  }
+  },
+  "electron": {
+    "bundler": "builder",
+    "packager": {},
+    "builder": {
+      "appId": "com.sunyhydralab.qview3d",
+      "productName": "QView3D",
+      "icon": "client/public/favicon2",
+      "win": {
+        "target": "portable"
+      },
+      "linux": {
+        "target": "AppImage"
+      },
+      "mac": {
+        "target": "dmg"
+      },
+      "publish": {
+        "provider": "github",
+        "owner": "L10nhunter",
+        "repo": "QView3D"
+      }
+    }
+  },
+  "config": {}
 }
