--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,3 @@
-FLASK_ENV=development
-FLASK_APP=app.py
+FLASK_RUN_HOST=127.0.0.1
 FLASK_RUN_PORT=8000
-SQLALCHEMY_DATABASE_URI=hvamc.db
-BASE_URL=http://localhost:8000
 SERVER_VERSION='0.1.0'
