--- a/client/package.json
+++ b/client/package.json
@@ -27,8 +27,11 @@
         "build-installer": "./Installer.js"
     },
     "dependencies": {
+        "@cyhnkckali/vue3-color-picker": "^2.0.0",
         "@fortawesome/fontawesome-free": "^6.5.1",
         "@vuepic/vue-datepicker": "^8.5.0",
+        "@vueuse/components": "^11.1.0",
+        "@vueuse/core": "^11.1.0",
         "axios": "^1.6.5",
         "bootstrap": "^5.3.3",
         "bootstrap-daterangepicker": "^3.1.0",
@@ -45,7 +48,6 @@
         "vue-router": "^4.2.5",
         "vue-socket.io-extended": "^4.2.0",
         "vue-toast-notification": "^3.1.2",
-        "vue3-colorpicker": "^2.3.0",
         "vue3-toast": "^0.0.1",
         "vuedraggable": "^4.1.0"
     },
