fix: go back to server folder once dependencies are installed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
         run: |
           cd ./
           pip install -r requirements.txt 
+          cd server/
           flask db init 
           flask db migrate 
           flask db upgrade
