--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
         "type-check": "vue-tsc --build --force",
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
         "format": "prettier --write src/",
-        "start-flask": "cd ../server && flask run",
+        "start-flask": "npm run build-only && cd ../server && flask run",
         "start-vue": "npm run dev",
         "start": "npm-run-all --parallel start-flask start-vue",
         "start-electron": "electron-forge start",
