--- a/client/package.json
+++ b/client/package.json
@@ -77,6 +77,7 @@
         "npm-run-all": "^4.1.5",
         "npm-run-all2": "^6.1.1",
         "prettier": "^3.0.3",
+        "rollup": "^4.24.0",
         "typescript": "~5.3.0",
         "vite": "^5.2.9",
         "vitest": "^1.0.4",
