--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Build client
         run: |
-          npm run build-only
+          npm run build
         working-directory: client
 
       - name: Setup server
