--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,8 @@ jobs:
 
       - name: Start server
         run: |
-          nohup npm run start-flask &
-        working-directory: client
+          nohup flask run &
+        working-directory: server
 
       - name: Wait for server to start
         run: |
