--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ flask_migrate==4.0.7
 flask_socketio==5.3.6
 flask_sqlalchemy==3.1.1
 pyserial==3.5
+pytest==8.3.3
+pytest-order==1.3.0
+pytest-xdist==3.6.1
 python-dotenv==1.0.1
 Requests==2.32.3
 SQLAlchemy
