--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
+alembic~=1.13.2
 Flask==3.0.3
-flask_cors==4.0.1
-flask_migrate==4.0.7
-flask_socketio==5.3.6
-flask_sqlalchemy==3.1.1
+Flask-Cors~=4.0.1
+Flask-Migrate~=4.0.7
+Flask-SocketIO~=5.3.6
+Flask_sqlalchemy==3.1.1
+pluggy~=1.5.0
 pyserial==3.5
 pytest==8.3.3
 pytest-order==1.3.0
-pytest-xdist==3.6.1
 python-dotenv==1.0.1
 Requests==2.32.3
-SQLAlchemy
+SQLAlchemy~=2.0.34
 tzlocal==2.1
 Werkzeug==3.0.3
 eventlet==0.37.0
