--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ pluggy~=1.5.0
 pyserial==3.5
 pytest==8.3.3
 pytest-order==1.3.0
+pytest-dependency~=0.6.0
 python-dotenv==1.0.1
 Requests==2.32.3
 SQLAlchemy~=2.0.34
