--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,4 +1,10 @@
 {
     "environment": "development",
-    "databaseURI": "hvamc"
+    "databaseURI": "hvamc",
+    "discord": {
+        "enabled": false,
+        "token": "<token>",
+        "command_prefix": "!",
+        "issues_channel": "<issues_channel>"
+    }
 }
