feat: tag issues role

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -5,6 +5,7 @@
         "enabled": false,
         "token": "<token>",
         "command_prefix": "!",
-        "issues_channel": "<issues_channel>"
+        "issues_channel": "<issues_channel>",
+        "issues_role": "<issues_role>"
     }
 }
