--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
         "type-check": "vue-tsc --build --force",
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
         "format": "prettier --write src/",
-        "start-flask": "npm run build-only && cd ../server && flask run",
+        "start-flask": "cd ../server && flask run",
+        "run-prod": "npm run build-only && start-flask",
         "start-vue": "npm run dev",
         "start": "npm-run-all --parallel start-flask start-vue",
         "start-electron": "electron-forge start",
@@ -32,6 +33,7 @@
         "@vuepic/vue-datepicker": "^8.5.0",
         "@vueuse/components": "^11.1.0",
         "@vueuse/core": "^11.1.0",
+        "ansi-to-html": "^0.7.2",
         "axios": "^1.6.5",
         "bootstrap": "^5.3.3",
         "bootstrap-daterangepicker": "^3.1.0",
