fix: formatting and cleanup

--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
         "node": "^21.6.2",
         "serve-handler": "^6.1.5",
         "socket.io-client": "^4.7.4",
+        "three": "^0.171.0",
         "toast": "^0.5.4",
         "vue": "^3.3.11",
         "vue-router": "^4.2.5",
@@ -67,6 +68,7 @@
         "@types/file-saver": "^2.0.7",
         "@types/jsdom": "^21.1.6",
         "@types/node": "^18.19.3",
+        "@types/three": "^0.171.0",
         "@vitejs/plugin-vue": "^4.5.2",
         "@vitejs/plugin-vue-jsx": "^3.1.0",
         "@vue/eslint-config-prettier": "^8.0.0",
