--- a/printeremu/data/settings.json
+++ b/printeremu/data/settings.json
@@ -1,6 +1,6 @@
 {
     "enabledPrinters": [],
-    "defaultAddress": "127.0.0.1",
+    "defaultAddress": "localhost",
     "defaultPort": 8001,
     "startup": "default"
 }
