Update ci.yml to install the proper dependencies from the right place.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,9 +32,8 @@ jobs:
 
       - name: Setup server
         run: |
-          cd ./
-          pip install -r requirements.txt 
-          cd server/
+          cd ./server/
+          pip install -r dependencies.txt
           flask db init 
           flask db migrate 
           flask db upgrade
