Revert "Reverted right before the merge of frontend-refactor and development because including the merge in the revert is pain"
This reverts commit 178692590d666ad259fcc9a3246ed43a3a4474e4.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,9 @@ jobs:
 
       - name: Setup server
         run: |
-          cd ./server/
-          pip install -r dependencies.txt
+          cd ./
+          pip install -r requirements.txt 
+          cd server/
           flask db init 
           flask db migrate 
           flask db upgrade
