--- a/client/package.json
+++ b/client/package.json
@@ -9,18 +9,9 @@
     "type": "module",
 
     "scripts": {
-        "dev": "vite",
-        "build": "run-p type-check \"build-only {@}\" --",
-        "preview": "vite preview",
         "test:unit": "vitest",
-        "build-only": "vite build",
-        "type-check": "vue-tsc --build --force",
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-        "format": "prettier --write src/",
-        "start-flask": "cd ../server && flask run",
-        "run-prod": "npm run build-only && start-flask",
-        "start-vue": "npm run dev",
-        "start": "npm-run-all --parallel start-flask start-vue"
+        "format": "prettier --write src/"
     },
 
     "dependencies": {
@@ -36,7 +27,7 @@
         "cors": "^2.8.5",
         "file-saver": "^2.0.5",
         "gcode-preview": "^2.18.0",
-        "node": "^21.6.2",
+        "node": "^18.x.x",
         "serve-handler": "^6.1.5",
         "socket.io-client": "^4.7.4",
         "three": "^0.171.0",
@@ -48,7 +39,7 @@
         "vue3-toast": "^0.0.1",
         "vuedraggable": "^4.1.0"
     },
-
+    
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.3.3",
         "@tsconfig/node18": "^18.x.x",
@@ -66,7 +57,6 @@
         "eslint": "^8.49.0",
         "eslint-plugin-vue": "^9.17.0",
         "jsdom": "^23.0.1",
-        "npm-run-all": "^4.1.5",
         "prettier": "^3.0.3",
         "rollup": "^4.24.0",
         "typescript": "~5.3.0",
