--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,6 @@
     "version": "0.9.1",
     "private": true,
     "type": "module",
-
     "scripts": {
         "dev": "vite",
         "build": "run-p type-check \"build-only {@}\" --",
@@ -22,7 +21,6 @@
         "start-vue": "npm run dev",
         "start": "npm-run-all --parallel start-flask start-vue"
     },
-
     "dependencies": {
         "@cyhnkckali/vue3-color-picker": "^2.0.0",
         "@fortawesome/fontawesome-free": "^6.5.1",
@@ -48,7 +46,6 @@
         "vue3-toast": "^0.0.1",
         "vuedraggable": "^4.1.0"
     },
-    
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.3.3",
         "@tsconfig/node18": "^18.x.x",
@@ -71,6 +68,7 @@
         "typescript": "~5.3.0",
         "vite": "^5.2.9",
         "vitest": "^1.0.4",
-        "vue-tsc": "^1.8.25"
+        "vue-tsc": "^1.8.25",
+        "npm-run-all": "^4.1.5"
     }
 }
