--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
