--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "gcode-preview": "2.18.0",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
