--- a/server-javascript/package.json
+++ b/server-javascript/package.json
@@ -25,8 +25,8 @@
   "homepage": "https://github.com/sunyhydralab/QView3D#readme",
   "dependencies": {
     "express": "^5.1.0",
-    "serialport": "^13.0.0",
-    "sqlite3": "^5.1.7"
+    "pg": "^8.16.3",
+    "serialport": "^13.0.0"
   },
   "devDependencies": {
     "jsdoc": "^4.0.4"
