refactor: rename MyFlaskApp to QViewApp and update database to QView.db

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,6 +1,6 @@
 {
     "environment": "development",
-    "databaseURI": "hvamc",
+    "databaseURI": "QView",
     "emulator_port": 8001,
     "discord": {
         "enabled": false,
