fix: add queue auto-progression and frontend sync
Auto-progress jobs through queue after completion. Fix removeJob to emit queue_update WebSocket event for frontend synchronization.

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -2,6 +2,10 @@
     "environment": "development",
     "databaseURI": "QView",
     "emulator_port": 8001,
+    "queue": {
+        "auto_progress": true,
+        "auto_progress_delay": 2
+    },
     "discord": {
         "enabled": false,
         "token": "<token>",
